# linalg-conan

./: .gitignore  .gitmodules  CMakeLists.txt  conan_create.py  conan_install.py  conanfile.py  create.sh  main.cpp
include/linalg/: linalg.h
test_package/: CMakeLists.txt
test_package/src/: example.cpp
